wtx-macros-tests/tests/fail/duplicated_local_pkg_attr.stderr
error: It is not possible to have more than one `pkg` attribute in the same element.
 --> tests/fail/duplicated_local_pkg_attr.rs:3:3
  |
3 |   #[pkg::aux]
  |   ^^^^^^^^^^^

error: It is not possible to have more than one `pkg` attribute in the same element.
  --> tests/fail/duplicated_local_pkg_attr.rs:17:3
   |
17 |   #[pkg::before_sending]
   |   ^^^^^^^^^^^^^^^^^^^^^^

error: It is not possible to have more than one `pkg` attribute in the same element.
  --> tests/fail/duplicated_local_pkg_attr.rs:34:3
   |
34 |   #[pkg::req_data]
   |   ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

